# open-parliament-austria

./: .coverage  .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/open_parliament_austria/: __init__.py  antraege.py  antraege_etc.py  personen.py  reden.py  resources.py  sitzungen.py  sitzungen_etc.py
tests/: conftest.py  test___init__.py  test_antraege.py  test_antraege_etc.py  test_personen.py  test_reden.py  test_sitzungen.py  test_sitzungen_etc.py
