[project]
name = "open-parliament-austria"
version = "0.1.0"
description = "Python community library for querying open Austrian Parliament data"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "jan", email = "152862650+j-haacker@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "numpy",
    "pandas",
    "pypdf",
    "requests",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fpdf",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "--cov=src/open_parliament_austria --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/open_parliament_austria"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 80
